--- a/file/src/main/res/layout/dialog_zfile_rename.xml
+++ b/file/src/main/res/layout/dialog_zfile_rename.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/zfile_dialog_shape"
     android:orientation="vertical">
 
     <TextView
@@ -13,47 +13,57 @@
         android:paddingTop="15dp"
         android:paddingRight="20dp"
         android:paddingBottom="15dp"
-        android:text="@string/zifle_rename_title" />
+        android:text="@string/zifle_rename_title"
+        android:textColor="@color/zfile_file_title" />
 
     <EditText
         android:id="@+id/zfile_dialog_renameEdit"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:hint="@string/zfile_info_rename"
-        android:imeOptions="actionDone"
-        android:maxLength="30"
-        android:maxLines="1"
-        android:inputType="text"
-        android:textColor="@color/zfile_black"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
+        android:hint="@string/zfile_info_rename"
+        android:imeOptions="actionDone"
+        android:inputType="text"
+        android:maxLength="30"
+        android:maxLines="1"
+        android:textColor="@color/zfile_black"
         android:textSize="15sp" />
 
-    <RelativeLayout
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0.5dp"
+        android:background="@color/zfile_line_color" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
         android:layout_marginBottom="@dimen/zfile_md_bottom_margin"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/zfile_dialog_rename_down"
-            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#00000000"
             android:text="@string/zfile_down"
-            android:textColor="@color/zfile_base_color" />
+            android:textColor="@color/permission_btn_back" />
+
+        <View
+            android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:background="@color/zfile_line_color" />
 
         <Button
             android:id="@+id/zfile_dialog_rename_cancel"
-            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/zfile_dialog_rename_down"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#00000000"
             android:text="@string/zfile_cancel"
-            android:textColor="@color/zfile_base_color" />
+            android:textColor="@color/permission_btn_back" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
