修复移动复制文件时的bug

--- a/file/src/main/res/layout/dialog_zfile_select_folder.xml
+++ b/file/src/main/res/layout/dialog_zfile_select_folder.xml
@@ -4,19 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorBackground"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/zfile_bgcolor">
+        android:background="@color/zfile_base_color">
 
         <ImageView
             android:id="@+id/zfile_select_folder_closePic"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="6dp"
-            android:background="@drawable/zfile_ripple_bg"
             android:padding="7dp"
             android:src="@drawable/zfile_close"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -33,7 +33,7 @@
             android:gravity="center"
             android:maxLines="1"
             android:text="@string/zfile_select_forder"
-            android:textColor="@color/zfile_black"
+            android:textColor="@color/zfile_title_text"
             android:textSize="15sp"
             app:layout_constraintLeft_toRightOf="@+id/zfile_select_folder_closePic"
             app:layout_constraintRight_toLeftOf="@+id/zfile_select_folder_downPic" />
@@ -43,7 +43,6 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="6dp"
-            android:background="@drawable/zfile_ripple_bg"
             android:padding="7dp"
             android:src="@drawable/zfile_down"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -56,6 +55,6 @@
         android:id="@+id/zfile_select_folder_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_zfile_list_folder"/>
+        tools:listitem="@layout/item_zfile_list_folder" />
 
 </LinearLayout>
