--- a/file/src/main/res/layout/dialog_zfile_sort.xml
+++ b/file/src/main/res/layout/dialog_zfile_sort.xml
@@ -107,12 +107,13 @@
         android:layout_width="match_parent"
         android:layout_height="45dp">
 
-        <TextView
+        <Button
             android:id="@+id/zfile_dialog_sort_cancel"
-            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#00000000"
+            android:gravity="center"
             android:text="@string/zfile_cancel"
             android:textColor="@color/permission_btn_back" />
 
@@ -123,11 +124,11 @@
 
         <Button
             android:id="@+id/zfile_dialog_sort_down"
-            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#00000000"
+            android:gravity="center"
             android:text="@string/zfile_down"
             android:textColor="@color/permission_btn_back" />
 
