适配深色模式

--- a/app/src/main/res/layout/activity_super.xml
+++ b/app/src/main/res/layout/activity_super.xml
@@ -262,6 +262,7 @@
             android:id="@+id/super_resultTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/title_tv_cancel_text_color"
             android:padding="20dp" />
 
     </LinearLayout>
