--- a/file/src/main/res/values/colors.xml
+++ b/file/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <!-- 可重写该属性达到主题颜色自定义 -->
     <color name="zfile_base_color">#03A9F4</color>
+    <color name="zfile_title_bar_color">#03A9F4</color>
     <color name="zfile_black">#000000</color>
     <color name="zfile_gray">#666666</color>
     <color name="zfile_title_selected">#131313</color>
