--- a/file/src/main/res/layout/activity_zfile_pic.xml
+++ b/file/src/main/res/layout/activity_zfile_pic.xml
@@ -2,13 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:background="@color/zfile_black">
 
     <ImageView
         android:id="@+id/zfile_pic_show"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:transitionName="@string/zfile_sharedElement_pic"/>
+        android:transitionName="@string/zfile_sharedElement_pic" />
 
 </FrameLayout>
 
