--- a/app/src/main/res/layout/activity_sun.xml
+++ b/app/src/main/res/layout/activity_sun.xml
@@ -6,14 +6,14 @@
     android:background="@color/colorAccent"
     android:orientation="vertical">
 
-<!--    <com.zj.file.ui.ZFileVideoPlayer-->
-<!--        android:id="@+id/sun_videoPlayer"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
+    <!--    <com.zj.file.ui.ZFileVideoPlayer-->
+    <!--        android:id="@+id/sun_videoPlayer"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="0dp"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintEnd_toEndOf="parent"-->
+    <!--        app:layout_constraintStart_toStartOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
     <ImageView
         android:id="@+id/sun_back"
@@ -21,21 +21,21 @@
         android:layout_height="40dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="50dp"
+        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/sun_titleLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="35dp"
         android:orientation="vertical"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/sun_back"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sun_back">
 
         <TextView
             android:layout_width="wrap_content"
@@ -49,9 +49,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:text="为吾王的诞生献上这血与泪编制的罪恶王冠"
             android:textColor="#FFFFFF"
-            android:textSize="14sp"
-            android:text="为吾王的诞生献上这血与泪编制的罪恶王冠" />
+            android:textSize="14sp" />
 
     </LinearLayout>
 
@@ -61,8 +61,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="75dp"
         android:text="未注册手机验证后完成注册"
-        android:textSize="13sp"
         android:textColor="#B5B5C3"
+        android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
         app:layout_constraintStart_toStartOf="@+id/sun_titleLayout"
         app:layout_constraintTop_toBottomOf="@+id/sun_titleLayout" />
@@ -74,20 +74,20 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/shape_sun_phone_edit"
         android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
         app:layout_constraintStart_toStartOf="@+id/sun_titleLayout"
-        app:layout_constraintTop_toBottomOf="@+id/sun_txt1"
-        android:orientation="horizontal">
+        app:layout_constraintTop_toBottomOf="@+id/sun_txt1">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:textSize="16sp"
-            android:textColor="#FFFFFF"
-            android:text="+ 86"
             android:gravity="center"
             android:paddingStart="10dp"
-            android:paddingEnd="5dp"/>
+            android:paddingEnd="5dp"
+            android:text="+ 86"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
 
         <ImageView
             android:layout_width="10dp"
@@ -117,23 +117,23 @@
         android:id="@+id/sun_loginBtn2"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/shape_sun_login_btn"
         android:gravity="center"
         android:text="登录"
         android:textColor="#FFFFFF"
         android:textSize="15sp"
-        android:background="@drawable/shape_sun_login_btn"
-        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
         app:layout_constraintStart_toStartOf="@+id/sun_titleLayout"
         app:layout_constraintTop_toBottomOf="@+id/sun_phoneBg1" />
 
     <TextView
         android:id="@+id/sun_pwdtxt"
-        android:textColor="#FFFFFF"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="账号密码登录"
         android:layout_marginTop="20dp"
+        android:text="账号密码登录"
+        android:textColor="#FFFFFF"
         android:textSize="13sp"
         app:layout_constraintStart_toStartOf="@+id/sun_titleLayout"
         app:layout_constraintTop_toBottomOf="@+id/sun_loginBtn2" />
@@ -141,23 +141,23 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:text="其他登录方式"
         android:textColor="#FFFFFF"
         android:textSize="13sp"
-        android:text="其他登录方式"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout"
-        app:layout_constraintBottom_toTopOf="@+id/sun_other"/>
+        app:layout_constraintBottom_toTopOf="@+id/sun_other"
+        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout" />
 
     <LinearLayout
         android:id="@+id/sun_other"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
-        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout"
-        app:layout_constraintBottom_toTopOf="@+id/sun_xytxt"
         android:layout_marginBottom="20dp"
         android:gravity="start|center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/sun_xytxt"
+        app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
+        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout">
 
         <ImageView
             android:layout_width="40dp"
@@ -167,8 +167,8 @@
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_we_chat"
-            android:layout_marginStart="30dp"/>
+            android:layout_marginStart="30dp"
+            android:src="@drawable/ic_we_chat" />
 
         <ImageView
             android:layout_width="40dp"
@@ -182,12 +182,12 @@
         android:id="@+id/sun_xytxt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
-        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="30dp"
+        android:text="登录即同意《用户协议》和《隐私政策》"
         android:textColor="#FFFFFF"
         android:textSize="13sp"
-        android:text="登录即同意《用户协议》和《隐私政策》"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/sun_titleLayout"
+        app:layout_constraintStart_toStartOf="@+id/sun_titleLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
