更新所有类型图标

--- a/file/src/main/res/drawable/ic_zfile_audio.xml
+++ b/file/src/main/res/drawable/ic_zfile_audio.xml
@@ -1,6 +1,7 @@
 <vector android:height="40dp" android:viewportHeight="1024"
     android:viewportWidth="1024" android:width="40dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#00C853" android:pathData="M213.33,85.33h409a42.67,42.67 0,0 1,30.17 12.5l231,231a42.67,42.67 0,0 1,12.5 30.17V853.33a85.33,85.33 0,0 1,-85.33 85.33H213.33a85.33,85.33 0,0 1,-85.33 -85.33V170.67a85.33,85.33 0,0 1,85.33 -85.33z"/>
-    <path android:fillColor="#FFFFFF" android:pathData="M512,608.68V362.67a21.33,21.33 0,0 1,38.27 -12.93c20.82,27.22 40.53,46.93 58.88,59.18 17.28,11.52 34.73,17.32 52.69,17.75a21.33,21.33 0,0 1,-1.02 42.67c-26.28,-0.64 -51.5,-9.05 -75.31,-24.92 -10.24,-6.83 -20.48,-15.19 -30.85,-25.17V661.33a21.59,21.59 0,0 1,-0.13 2.35c1.71,33.07 -22.61,70.23 -64.13,92.5 -54.02,29.01 -116.74,21.97 -140.12,-15.66 -23.38,-37.67 1.45,-91.65 55.47,-120.66 36.31,-19.5 76.63,-22.7 106.24,-11.18z"/>
-    <path android:fillColor="#43A047" android:pathData="M896,341.33h-213.33a42.67,42.67 0,0 1,-42.67 -42.67V85.33l256,256z"/>
+    <path android:fillColor="#379FD3" android:pathData="M147.2,0C102.4,0 65.6,36.8 65.6,81.6v860.8c0,44.8 36.8,81.6 81.6,81.6h731.2c44.8,0 81.6,-36.8 81.6,-81.6V324.8L657.6,0H147.2z"/>
+    <path android:fillColor="#2987C8" android:pathData="M960,326.4v16H755.2s-100.8,-20.8 -97.6,-108.8c0,0 3.2,92.8 96,92.8H960z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M657.6,0v233.6c0,25.6 17.6,92.8 97.6,92.8H960L657.6,0z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M540.8,544l-227.2,30.4v214.4c-11.2,-3.2 -25.6,-4.8 -40,-1.6 -32,6.4 -52.8,27.2 -46.4,46.4 6.4,20.8 36.8,30.4 68.8,24 28.8,-4.8 48,-22.4 48,-40V646.4l166.4,-20.8v132.8c-11.2,-3.2 -25.6,-3.2 -40,0 -33.6,6.4 -54.4,27.2 -48,46.4 6.4,19.2 36.8,30.4 70.4,24 28.8,-6.4 49.6,-24 48,-41.6V544z"/>
 </vector>
