--- a/file/src/main/res/drawable/ic_zfile_txt.xml
+++ b/file/src/main/res/drawable/ic_zfile_txt.xml
@@ -1,12 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="40dp"
-    android:height="40dp"
-    android:viewportWidth="1024"
-    android:viewportHeight="1024">
-    <path
-        android:fillColor="#24A0C6"
-        android:pathData="M832.87,315.63c1.03,-17.55 -5.15,-35.44 -18.56,-48.85L701.35,153.82c-11.62,-15.67 -30.26,-25.83 -51.27,-25.83L256.83,127.99c-26.52,0 -49.25,16.18 -58.88,39.21a63.56,63.56 0,0 0,-5.05 24.91L192.9,545h-24.88c-22.09,0 -40,17.91 -40,40v142.8c0,22.09 17.91,40 40,40h24.88v70.48h0.46c3.26,32.18 30.43,57.29 63.47,57.29h512.39v0.06c35.23,0 63.79,-28.56 63.79,-63.79L833.01,319.75c0.01,-1.39 -0.05,-2.76 -0.14,-4.12zM227.52,616.67v-32.59h107.6v32.59h-35.87v116.14h-35.87L263.38,616.67h-35.86zM769.22,831.78L256.7,831.78L256.7,767.8h406.64c22.09,0 40,-17.91 40,-40L703.34,585c0,-22.09 -17.91,-40 -40,-40L256.7,545L256.7,191.78h327.51v121.45c0,35.23 28.56,63.79 63.79,63.79h121.22v454.76zM344.14,584.08h40.79l21.32,41.99 21.32,-41.99h40.79l-42.63,72.49 45.5,76.25h-40.99l-23.98,-45.75 -23.98,45.75h-40.99l45.5,-76.25 -42.65,-72.49zM477.36,616.67v-32.59h107.6v32.59L549.1,616.67v116.14h-35.87L513.23,616.67h-35.87zM769.22,313.23L648,313.23L648,191.78h1.09l120.13,120.13v1.32z" />
-    <path
-        android:fillColor="#24A0C6"
-        android:pathData="M351.47,320.22H479.2c17.75,0 32.14,-14.39 32.14,-32.14s-14.39,-32.14 -32.14,-32.14H351.47c-17.75,0 -32.14,14.39 -32.14,32.14 0,17.76 14.39,32.14 32.14,32.14zM543.98,384.04H351.47c-17.75,0 -32.14,14.39 -32.14,32.14s14.39,32.14 32.14,32.14h192.51c17.75,0 32.14,-14.39 32.14,-32.14 -0.01,-17.75 -14.4,-32.14 -32.14,-32.14z" />
+<vector android:height="40dp" android:viewportHeight="1024"
+    android:viewportWidth="1024" android:width="40dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#F9CA06" android:pathData="M147.2,0C102.4,0 65.6,35.2 65.6,80v862.4c0,44.8 35.2,81.6 81.6,81.6h731.2c44.8,0 81.6,-36.8 81.6,-81.6V324.8L657.6,0H147.2z"/>
+    <path android:fillColor="#F7BC04" android:pathData="M960,324.8v16H755.2s-100.8,-19.2 -97.6,-107.2c0,0 3.2,91.2 96,91.2H960z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M657.6,0v232c0,27.2 17.6,92.8 97.6,92.8H960L657.6,0z"/>
+    <path android:fillColor="#FFFFFF" android:pathData="M364.8,688h-52.8v161.6c0,6.4 -4.8,11.2 -12.8,11.2 -6.4,0 -11.2,-4.8 -11.2,-11.2L288,688h-52.8c-4.8,0 -9.6,-3.2 -9.6,-9.6 0,-6.4 4.8,-11.2 9.6,-11.2h129.6c4.8,0 9.6,4.8 9.6,11.2 0,6.4 -4.8,9.6 -9.6,9.6zM552,860.8c-4.8,0 -8,0 -9.6,-3.2l-59.2,-80 -60.8,80c-1.6,3.2 -4.8,3.2 -8,3.2 -6.4,0 -11.2,-4.8 -11.2,-11.2 0,-1.6 0,-4.8 1.6,-6.4l62.4,-81.6 -57.6,-78.4c-1.6,-1.6 -1.6,-3.2 -1.6,-6.4 0,-4.8 3.2,-11.2 11.2,-11.2 3.2,0 6.4,1.6 9.6,4.8l54.4,73.6 54.4,-73.6c3.2,-3.2 6.4,-4.8 9.6,-4.8 6.4,0 11.2,4.8 11.2,11.2 0,3.2 0,4.8 -1.6,6.4l-57.6,76.8 62.4,83.2c0,1.6 1.6,4.8 1.6,6.4 0,6.4 -4.8,11.2 -11.2,11.2zM731.2,688h-52.8v161.6c0,6.4 -4.8,11.2 -12.8,11.2 -6.4,0 -11.2,-4.8 -11.2,-11.2L654.4,688h-52.8c-4.8,0 -9.6,-3.2 -9.6,-9.6 0,-6.4 4.8,-11.2 9.6,-11.2h129.6c4.8,0 9.6,4.8 9.6,11.2 0,6.4 -4.8,9.6 -9.6,9.6z"/>
 </vector>
