--- a/file/src/main/res/layout/fragment_zfile_qw.xml
+++ b/file/src/main/res/layout/fragment_zfile_qw.xml
@@ -23,12 +23,14 @@
 
         <ProgressBar
             android:layout_width="45dp"
-            android:layout_height="45dp" />
+            android:layout_height="45dp"
+            android:indeterminateDrawable="@drawable/progress_bar_back" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:textColor="@color/title_tv_cancel_text_color"
             android:text="@string/zfile_qw_loading" />
 
     </LinearLayout>
